--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <img src="./images/logo.png" alt="MenuDesignAI Logo" class="logo">
               <h1>Redesign Your Restaurant Menu.<br><span>Maximize Your Profits.</span></h1>
               <p>Our AI engine analyzes your menu data and applies proven menu engineering principles to create data-driven designs that increase restaurant profits by up to 20%.</p>
-              <a href="#waitlist" class="cta-btn">Join Exclusive Waitlist</a>
+              <a href="#waitlist" class="cta-btn">Join Waitlist</a>
           </div>
       </div>
     </section>
