--- a/index.html
+++ b/index.html
@@ -3,17 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>MenuDesignAI - Transform Restaurant Menus with AI</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="canonical" href="https://menudesignai.com/">
+
+    <meta name="description" content="MenuDesignAI uses advanced AI to optimize restaurant menu designs, increasing profits by up to 20% through strategic layout and menu engineering principles.">
+    <meta name="keywords" content="menu design, restaurant menu design, menu engineering, AI menu design, menu optimization, restaurant profits, data-driven menu design">
+    <meta name="author" content="MenuDesignAI">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://menudesignai.com/">
+    <meta property="og:title" content="MenuDesignAI - Transform Restaurant Menus with AI">
+    <meta property="og:description" content="Our AI engine analyzes your menu data and applies proven menu engineering principles to create data-driven designs that increase restaurant profits.">
+    <meta property="og:image" content="https://menudesignai.com/images/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://menudesignai.com/">
+    <meta property="twitter:title" content="MenuDesignAI - Transform Restaurant Menus with AI">
+    <meta property="twitter:description" content="AI-powered menu design that increases restaurant profits by up to 20% through data-driven layout optimization.">
+    <meta property="twitter:image" content="https://menudesignai.com/images/logo.png">
     
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "MenuDesignAI",
+        "description": "AI-powered restaurant menu design tool that uses menu engineering principles to increase profits by up to 20%",
+        "applicationCategory": "BusinessApplication",
+        "offers": {
+          "@type": "Offer",
+          "availability": "https://schema.org/LimitedAvailability",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "keywords": "menu design, restaurant menu, menu engineering, profit optimization",
+        "url": "https://menudesignai.com"
+      }
+      </script>
 </head>
 <body>
     <section class="hero">
       <div class="hero-decoration"></div>
       <div class="hero-container">
           <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
-              <img src="./images/logo.png" alt="MenuDesignAI Logo" class="logo">
+              <img src="./images/logo.png" alt="MenuDesignAI Logo - AI-powered menu design tool" width="118" height="100" class="logo">
               <h1>Redesign Your Restaurant Menu.<br><span>Maximize Your Profits.</span></h1>
               <p>Our AI engine analyzes your menu data and applies proven menu engineering principles to create data-driven designs that increase restaurant profits by up to 20%.</p>
               <a href="#waitlist" class="cta-btn">Join Waitlist</a>
