--- a/index.html
+++ b/index.html
@@ -221,9 +221,14 @@
                 <h2 data-aos="fade-up">Limited Access Available</h2>
                 <p data-aos="fade-up" data-aos-delay="100">Due to high demand, we're currently limiting access to MenuDesignAI. Join our waitlist to be notified when it's your turn.</p>
                 
-                <div class="form-container" data-aos="fade-up" data-aos-delay="200">
+                <!-- <div class="form-container" data-aos="fade-up" data-aos-delay="200">
                     <iframe class="airtable-embed" src="https://airtable.com/embed/appygEd77EsW7axv7/pagCnhLRDOmg0pTse/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-                </div>
+                </div> -->
+
+                <div class="form-container" data-aos="fade-up" data-aos-delay="200">
+                  <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
+                  <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/appygEd77EsW7axv7/pagCnhLRDOmg0pTse/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent;"></iframe>
+              </div>
             </div>
         </div>
     </section>
