adding google analytics

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       }
       </script>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MKTF07TDPQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MKTF07TDPQ');
+</script>
 <body>
     <section class="hero">
       <div class="hero-decoration"></div>
